bindings_swift/module.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    int32_t capacity;
    int32_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef int32_t (*ForeignCallback)(uint64_t, int32_t, const uint8_t *_Nonnull, int32_t, RustBuffer *_Nonnull);
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
RustBuffer uniffi_client_fn_method_client_do_typing(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_recall(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer chat_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send_text(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer text, RustBuffer mentions, RustBuffer reply_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send_image(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer url_or_data, RustBuffer mentions, RustBuffer reply_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send_voice(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer url_or_data, RustBuffer duration, RustBuffer mentions, RustBuffer reply_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send_video(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer url, RustBuffer thumbnail, RustBuffer duration, RustBuffer mentions, RustBuffer reply_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send_file(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer url_or_data, RustBuffer filename, uint64_t size, RustBuffer mentions, RustBuffer reply_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send_location(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer latitude, RustBuffer longitude, RustBuffer address, RustBuffer mentions, RustBuffer reply_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send_link(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer url, RustBuffer mentions, RustBuffer reply_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send_invite(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer mentions, RustBuffer message, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_send(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer content, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_upload(void*_Nonnull ptr, RustBuffer uploader_url, RustBuffer local_file_path, RustBuffer key, int8_t is_private, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_download(void*_Nonnull ptr, RustBuffer file_url, RustBuffer save_to, RustBuffer key, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_cancel_download(void*_Nonnull ptr, RustBuffer file_url, RustBuffer key, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_cancel_upload(void*_Nonnull ptr, RustBuffer local_file_path, RustBuffer key, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_init_callback_callback(ForeignCallback _Nonnull callback_stub, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_init_callback_uploader(ForeignCallback _Nonnull callback_stub, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_func_init_log(RustBuffer level, int8_t is_test, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_func_get_current_user(RustBuffer root, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_func_set_current_user(RustBuffer root, RustBuffer user_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_func_login(RustBuffer endpoint, RustBuffer email, RustBuffer password, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_client_rustbuffer_alloc(int32_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_client_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_client_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_client_rustbuffer_reserve(RustBuffer buf, int32_t additional, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_client_checksum_func_init_log(void
    
);
uint16_t uniffi_client_checksum_func_get_current_user(void
    
);
uint16_t uniffi_client_checksum_func_set_current_user(void
    
);
uint16_t uniffi_client_checksum_func_login(void
    
);
uint16_t uniffi_client_checksum_method_client_set_callback(void
    
);
uint16_t uniffi_client_checksum_method_client_set_uploader(void
    
);
uint16_t uniffi_client_checksum_method_client_prepare(void
    
);
uint16_t uniffi_client_checksum_method_client_attach(void
    
);
uint16_t uniffi_client_checksum_method_client_app_active(void
    
);
uint16_t uniffi_client_checksum_method_client_app_deactivate(void
    
);
uint16_t uniffi_client_checksum_method_client_logout(void
    
);
uint16_t uniffi_client_checksum_method_client_run_loop(void
    
);
uint16_t uniffi_client_checksum_method_client_shutdown(void
    
);
uint16_t uniffi_client_checksum_method_client_get_network_state(void
    
);
uint16_t uniffi_client_checksum_method_client_get_topics_knock_count(void
    
);
uint16_t uniffi_client_checksum_method_client_get_conversations_count(void
    
);
uint16_t uniffi_client_checksum_method_client_get_conversation(void
    
);
uint16_t uniffi_client_checksum_method_client_remove_conversation(void
    
);
uint16_t uniffi_client_checksum_method_client_set_conversation_sticky(void
    
);
uint16_t uniffi_client_checksum_method_client_set_conversation_mute(void
    
);
uint16_t uniffi_client_checksum_method_client_set_conversation_read(void
    
);
uint16_t uniffi_client_checksum_method_client_get_conversations(void
    
);
uint16_t uniffi_client_checksum_method_client_sync_conversations(void
    
);
uint16_t uniffi_client_checksum_method_client_get_topic(void
    
);
uint16_t uniffi_client_checksum_method_client_get_topic_admins(void
    
);
uint16_t uniffi_client_checksum_method_client_get_topic_owner(void
    
);
uint16_t uniffi_client_checksum_method_client_get_topic_members(void
    
);
uint16_t uniffi_client_checksum_method_client_get_chat_logs_desc(void
    
);
uint16_t uniffi_client_checksum_method_client_get_chat_log(void
    
);
uint16_t uniffi_client_checksum_method_client_search_chat_log(void
    
);
uint16_t uniffi_client_checksum_method_client_get_topic_knocks(void
    
);
uint16_t uniffi_client_checksum_method_client_create_topic(void
    
);
uint16_t uniffi_client_checksum_method_client_create_chat(void
    
);
uint16_t uniffi_client_checksum_method_client_update_topic(void
    
);
uint16_t uniffi_client_checksum_method_client_update_topic_notice(void
    
);
uint16_t uniffi_client_checksum_method_client_silent_topic(void
    
);
uint16_t uniffi_client_checksum_method_client_silent_topic_member(void
    
);
uint16_t uniffi_client_checksum_method_client_add_topic_admin(void
    
);