bindings_python/client.py

    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_typing.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_recall.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_recall.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send_text.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send_text.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send_image.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send_image.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send_voice.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send_voice.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send_video.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send_video.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send_file.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.c_uint64,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send_file.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send_location.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send_location.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send_link.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send_link.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send_invite.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send_invite.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_do_send.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_do_send.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_upload.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_upload.restype = None
_UniFFILib.uniffi_client_fn_method_client_download.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_download.restype = None
_UniFFILib.uniffi_client_fn_method_client_cancel_download.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_cancel_download.restype = None
_UniFFILib.uniffi_client_fn_method_client_cancel_upload.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_cancel_upload.restype = None
_UniFFILib.uniffi_client_fn_init_callback_callback.argtypes = (
    FOREIGN_CALLBACK_T,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_init_callback_callback.restype = None
_UniFFILib.uniffi_client_fn_init_callback_uploader.argtypes = (
    FOREIGN_CALLBACK_T,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_init_callback_uploader.restype = None
_UniFFILib.uniffi_client_fn_func_init_log.argtypes = (
    RustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_func_init_log.restype = None
_UniFFILib.uniffi_client_fn_func_get_current_user.argtypes = (
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_func_get_current_user.restype = RustBuffer
_UniFFILib.uniffi_client_fn_func_set_current_user.argtypes = (
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_func_set_current_user.restype = None
_UniFFILib.uniffi_client_fn_func_login.argtypes = (
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_func_login.restype = RustBuffer
_UniFFILib.ffi_client_rustbuffer_alloc.argtypes = (
    ctypes.c_int32,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.ffi_client_rustbuffer_alloc.restype = RustBuffer
_UniFFILib.ffi_client_rustbuffer_from_bytes.argtypes = (
    ForeignBytes,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.ffi_client_rustbuffer_from_bytes.restype = RustBuffer
_UniFFILib.ffi_client_rustbuffer_free.argtypes = (
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.ffi_client_rustbuffer_free.restype = None
_UniFFILib.ffi_client_rustbuffer_reserve.argtypes = (
    RustBuffer,
    ctypes.c_int32,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.ffi_client_rustbuffer_reserve.restype = RustBuffer
_UniFFILib.uniffi_client_checksum_func_init_log.argtypes = (
)
_UniFFILib.uniffi_client_checksum_func_init_log.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_func_get_current_user.argtypes = (
)
_UniFFILib.uniffi_client_checksum_func_get_current_user.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_func_set_current_user.argtypes = (
)
_UniFFILib.uniffi_client_checksum_func_set_current_user.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_func_login.argtypes = (
)
_UniFFILib.uniffi_client_checksum_func_login.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_callback.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_callback.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_uploader.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_uploader.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_prepare.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_prepare.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_attach.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_attach.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_app_active.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_app_active.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_app_deactivate.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_app_deactivate.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_logout.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_logout.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_run_loop.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_run_loop.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_shutdown.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_shutdown.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_network_state.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_network_state.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_topics_knock_count.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_topics_knock_count.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_conversations_count.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_conversations_count.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_conversation.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_conversation.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_remove_conversation.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_remove_conversation.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_conversation_sticky.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_conversation_sticky.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_conversation_mute.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_conversation_mute.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_conversation_read.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_conversation_read.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_conversations.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_conversations.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_sync_conversations.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_sync_conversations.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_topic.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_topic.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_topic_admins.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_topic_admins.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_topic_owner.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_topic_owner.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_topic_members.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_topic_members.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_chat_logs_desc.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_chat_logs_desc.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_chat_log.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_chat_log.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_search_chat_log.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_search_chat_log.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_topic_knocks.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_topic_knocks.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_create_topic.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_create_topic.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_create_chat.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_create_chat.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_update_topic.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_update_topic.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_update_topic_notice.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_update_topic_notice.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_silent_topic.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_silent_topic.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_silent_topic_member.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_silent_topic_member.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_add_topic_admin.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_add_topic_admin.restype = ctypes.c_uint16
